@@ -1,8 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>org.toop</groupId>
-	<artifactId>pism_framework</artifactId>
+	<parent>
+		<groupId>org.toop</groupId>
+		<artifactId>pism</artifactId>
+		<version>0.1</version>
+	</parent>
+
+	<artifactId>framework</artifactId>
 	<version>0.1</version>
 
 	<properties>
@@ -13,6 +18,14 @@
 	</properties>
 
 	<dependencies>
+
+		<dependency>
+			<groupId>org.toop</groupId>
+			<artifactId>processors</artifactId>
+			<version>0.1</version>
+			<scope>compile</scope>
+		</dependency>
+
 		<dependency>
 			<groupId>com.diffplug.spotless</groupId>
 			<artifactId>spotless-maven-plugin</artifactId>
@@ -123,7 +136,17 @@
             <scope>compile</scope>
         </dependency>
 
-    </dependencies>
+        <dependency>
+            <groupId>com.google.errorprone</groupId>
+            <artifactId>error_prone_core</artifactId>
+            <version>2.42.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.errorprone</groupId>
+            <artifactId>error_prone_annotations</artifactId>
+            <version>2.42.0</version>
+        </dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
@@ -132,11 +155,73 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.14.1</version>
 				<configuration>
-					<source>25</source>
+                    <showWarnings>true</showWarnings>
+                    <fork>true</fork>
+                    <executable>${java.home}/bin/javac</executable>
+                    <source>25</source>
 					<target>25</target>
-					<release>25</release>
+                    <release>25</release>
 					<encoding>UTF-8</encoding>
+                    <compilerArgs>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
+                        <arg>
+                            -Xplugin:ErrorProne
+                        </arg>
+<!--						TODO-->
+<!--						-Xep:RestrictedApi:ERROR \-->
+<!--						-XepOpt:RestrictedApi:annotation=org.toop.annotations.TestsOnly \-->
+<!--						-XepOpt:RestrictedApi:allowlistRegex=(?s).*/src/test/java/.*|.*test\.java \-->
+<!--						-XepOpt:RestrictedApi:message=This API is marked @TestsOnly and shouldn't be normally used.-->
+                        <arg>-XDcompilePolicy=simple</arg>
+                        <arg>--should-stop=ifError=FLOW</arg>
+                    </compilerArgs>
+<!--					<generatedSourcesDirectory>-->
+<!--						${project.build.directory}/generated-sources/-->
+<!--					</generatedSourcesDirectory>-->
+<!--					<annotationProcessors>-->
+<!--						<annotationProcessor>-->
+<!--							org.toop.processors.AutoResponseResultProcessor-->
+<!--						</annotationProcessor>-->
+<!--					</annotationProcessors>-->
+                    <annotationProcessorPaths>
+						<path>
+							<groupId>org.toop</groupId>
+							<artifactId>processors</artifactId>
+							<version>0.1</version>
+						</path>
+						<path>
+							<groupId>com.google.auto.service</groupId>
+							<artifactId>auto-service</artifactId>
+							<version>1.1.1</version>
+						</path>
+						<path>
+							<groupId>com.squareup</groupId>
+							<artifactId>javapoet</artifactId>
+							<version>1.13.0</version>
+						</path>
+                        <path>
+                            <groupId>com.google.errorprone</groupId>
+                            <artifactId>error_prone_core</artifactId>
+                            <version>2.42.0</version>
+                        </path>
+                    </annotationProcessorPaths>
 				</configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.google.errorprone</groupId>
+                        <artifactId>error_prone_core</artifactId>
+                        <version>2.42.0</version>
+                    </dependency>
+                </dependencies>
 			</plugin>
 			<plugin>
 				<groupId>com.diffplug.spotless</groupId>
